<resources>
    <string name="app_name" translatable="false">PESIntegra</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="tots_els_posts">Tots els posts</string>
    <string name="habitatge">Habitatge</string>
    <string name="feina">Feina</string>
    <string name="activitats">Activitats</string>
    <string name="informaci_til">Informació útil</string>
    <string name="perfil">Perfil</string>
    <string name="configuracio">Configuració</string>
    <string name="ajuda">Ajuda</string>
    <string name="calendari">Calendari</string>
    <string name="hint_emergencies">Emergencies</string>
    <string name="hint_hospitals">Hospitals and urgent care centers</string>
    <string name="horaTitol">Hora:</string>
    <string name="dataTitol">Data:</string>
    <string name="titolTitol">Títol:</string>
    <string name="localitzacioTitol">Localització:</string>
    <string name="descripcioTitol">Descripció:</string>
    <string name="botoEnviar">Enviar</string>
    <string name="hola">hello</string>
    <string name="BTNyes">YES</string>
    <string name="BTNno">NO</string>
    <string name="msgRegister">Are you new? Click here to register!</string>
    <string name="mail">Email</string>
    <string name="confirmationPassword">Password confirmation</string>
    <string name="birthdate">Birth date</string>
    <string name="BTNcancel">CANCEL</string>
    <string name="BTNregister">REGISTER</string>
    <string name="BTNlogin">LOGIN</string>
    <string name="allPost">All posts</string>
    <string name="housing">Housing</string>
    <string name="work">Work</string>
    <string name="activities">Activities</string>
    <string name="usefulInfo">Useful information</string>
    <string name="profile">Profile</string>
    <string name="calendar">Calendar</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="logOut">Log out</string>
    <string name="exit">Exit</string>
    <string name="changeImage">Change image</string>
    <string name="changeMail">Change email</string>
    <string name="changePassword">Change password</string>
    <string name="myPosts">My posts</string>
    <string name="hiddenPosts">Hidden posts</string>
    <string name="BTNsport">SPORT</string>
    <string name="BTNmusic">MUSIC</string>
    <string name="BTNcinema">CINEMA</string>
    <string name="BTNreading">READING</string>
    <string name="BTNtecnology">TECNOLOGY</string>
    <string name="BTNcooking">COOKING</string>
    <string name="BTNfashion">FASHION</string>
    <string name="BTNtravelling">TRAVELLING</string>
    <string name="BTNart">ART</string>
    <string name="newEmail">New email</string>
    <string name="currentEmail">Current email:</string>
    <string name="BTNconfirma">CONFIRM</string>
    <string name="currentPassword">Current password</string>
    <string name="newPassword">New password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="BTNcreate">CREATE</string>
    <string name="emergencies">Emergencies</string>
    <string name="hospitals">Hospitals and urgent care centers</string>
    <string name="locationGM">Location. Click here to select it from Google Maps</string>
    <string name="vote">Vote:</string>
    <string name="msgClickedActivity">You clicked: Activity</string>
    <string name="msgClickedHousing">You clicked: Housing</string>
    <string name="msgClickedWork">You clicked: Work</string>
    <string name="msgExit">Are you sure you want to exit?</string>
    <string name="msgYes">Yes</string>
    <string name="msgNo">No</string>
    <string name="msgExitApp">Are you sure you want to exit the Application?</string>
    <string name="errorTitle">ERROR</string>
    <string name="BTNback">BACK</string>
    <string name="selectTime">Select time</string>
    <string name="ERRlogin">Username and password do not match any user</string>
    <string name="msgYouClicked">You clicked:</string>
    <string name="hidePost">Hide post</string>
    <string name="editPost">Edit post</string>
    <string name="deletePost">Delete post</string>
    <string name="showPost">Show post</string>
    <string name="AddChangeImg">Add/Change image</string>
    <string name="confShowPostAgain">The post will be visble again. Do you want to cancel?</string>
    <string name="confPostHidden">The post will be hidden. Cancel?</string>
    <string name="msgLogOut">Are you sure you want to log out?</string>
    <string name="undo">UNDO</string>
    <string name="title_activity_maps">Map</string>
    <string name="interests">Interests</string>
    <string name="catalan">Catalan (ca)</string>
    <string name="spanish">Spanish (ES)</string>
    <string name="english">English (EN)</string>
    <string name="freePlaces1">There are</string>
    <string name="freePlaces2">" free places"</string>
    <string name="noFreePlaces">There isn\'t any free place left for this activity</string>
    <string name="freePlaces">Free places:</string>
    <string name="any_lang">Any language</string>
    <string name="adv_search">Advanced Search</string>
    <string name="adv_search_query">Text to search</string>
    <string name="adv_search_user">User</string>
    <string name="adv_search_date_ini">Initial Date</string>
    <string name="adv_search_date_fi">Final Date</string>
    <string name="BTNadv_search">Search</string>
    <string name="adv_search_language">Language</string>
    <string name="languageTitle">Language:</string>
    <string name="msgBadSettings">The settings aren\'t correct</string>
    <string name="usr_not_exists">This user does not exist.</string>
    <string name="invalid_date_year">The date is invalid, it is anterior. Incorrect year.</string>
    <string name="invalid_date_month">The date is invalid, it is anterior. Incorrect month.</string>
    <string name="invalid_date_day">The date is invalid, it is anterior. Incorrect day.</string>
    <string name="afegir_comment">Add coment</string>
    <string name="my_profile">My profile</string>
    <string name="see_posts">Posts of user</string>
    <string name="search_user">Search user</string>
    <string name="view_map">View on map</string>
    <string name="ERRnoValidLoc">Location is not valid</string>
    <string name="ERRemptyFields">There are empty fields</string>
    <string name="ERRnotValidDate">The date isn\'t valid</string>
    <string name="ERRincorrectMail">The email format isn\'t correct</string>
    <string name="ERRpasswordNotMatch">The passwords doesn\'t match</string>
    <string name="BTNrating">RATING</string>
    <string name="BTNnewest">NEWEST</string>
    <string name="delete_comment">Delete comment</string>
    <string name="report_comment">Report comment</string>
    <string name="ERRsystem">System Error</string>
    <string name="ERRnoPlaces">There were no free places</string>
    <string name="report_post">Report post</string>
    <string name="ban_user">Ban user</string>
    <string name="mod">Convert user to mod</string>
    <string name="reported_comments">Reported comments</string>
    <string name="reported_posts">Reported posts</string>
    <string name="afegir_resposta">Reply</string>
    <string name="google_maps">Calendar in Google Maps</string>
    <string name="BTNfollow">Follow post</string>
    <string name="BTNunfollow">Unfollow post</string>
    <string name="BTNtranslate">Translate post</string>
    <string name="n_attendants">Number of attendants</string>
    <string name="ERRnotValidAttendants">Number of attendants has to be an integer</string>
    <string name="unblock_user">Unblock user</string>
    <string name="invalid_date_null">One of the dates is not assigned.</string>
    <string name="BTNedit">EDIT</string>
    <string name="BTNreobrir">REOPEN</string>
    <string name="reopenPost">Reopen Post</string>
    <string name="passwordFail">The Old Password doesn\'t match</string>
    <string name="passwordUpdated">Password updated</string>
</resources>
