<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/hide_post"
        android:title="@string/hidePost"/>

    <item
        android:id="@+id/show_post"
        android:title="@string/showPost"/>

    <item
        android:id="@+id/editar_post"
        android:title="@string/editPost"/>

    <item
        android:id="@+id/follow_post"
        android:title="@string/BTNfollow"/>

    <item
        android:id="@+id/unfollow_post"
        android:title="@string/BTNunfollow"/>

    <item
        android:id="@+id/translate_post"
        android:title="@string/BTNtranslate"/>

    <item
        android:id="@+id/borrar_post"
        android:title="@string/deletePost"/>

    <item
        android:id="@+id/report_post"
        android:title="@string/report_post"/>

    <item
        android:id="@+id/maps"
        android:title="@string/view_map"/>

    <item
        android:id="@+id/user_profile"
        android:title="@string/profile"/>

</menu>