<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="56dp">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="550dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"

        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/titolTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/titolTitol" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/titolInputAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/input_text_background" />
        />

        <TextView
            android:id="@+id/dataTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/dataTitol" />

        <TextView
            android:id="@+id/dateInputAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/input_text_background"
            android:clickable="true"
            android:longClickable="false"
            />
        />
        <TextView
            android:id="@+id/horaTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/horaTitol" />

        <TextView
            android:id="@+id/hourInputAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/input_text_background"
            android:clickable="true"
            android:longClickable="false"
            />
        />

        <TextView
            android:id="@+id/localitzacioTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/localitzacioTitol" />

        <EditText
            android:id="@+id/locationInputAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="35dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/input_text_background"
            android:clickable="true"
            android:enabled="false"/>
        />



        <TextView
            android:id="@+id/descripcioTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/descripcioTitol" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/descriptionTitolAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:layout_marginTop="3dp"
            android:background="@drawable/input_text_background" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="80dp" />

        <Button
            android:id="@+id/submitPostAct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/botoEnviar" />


        />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>