<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="1dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:orientation="vertical"
            android:weightSum="15"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:gravity="center">
                    <TextView
                        android:id="@+id/titleSettings"
                        android:layout_width="match_parent"
                        android:textSize="30dp"
                        android:textStyle="bold"
                        android:hint="@string/settings"/>
            </TableRow>


            <TableRow
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center">

                <android.support.design.widget.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </android.support.design.widget.AppBarLayout>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_weight="1"
                android:gravity="center">
                <TextView
                    android:id="@+id/languageTitle"
                    android:layout_width="342dp"
                    android:layout_height="32dp"
                    android:textSize="20dp"
                    android:hint="@string/languageTitle"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center">

                <Spinner
                    android:id="@+id/chosenLanguage"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="5dp"/>

            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/settingsSave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/BTNconfirma" />
            </TableRow>

            <TableRow>
                <Button
                    android:id="@+id/settingsCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center"
                    android:text="@string/BTNcancel" />
            </TableRow>

        </TableLayout>
    </android.support.v4.widget.NestedScrollView>
</ScrollView>