<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/logoPES"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/logo_pes" />

        </TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15px"
            android:textSize="25px"
            android:text="@string/currentEmail" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:id="@+id/user_mail"
                android:layout_height="34dp"
                android:layout_margin="15dp"
                android:layout_weight="1"
                android:drawableLeft="@mipmap/ic_email_black_24dp"
                android:gravity="center"
                android:padding="10dp"
                android:textColor="@color/primary_dark"
                android:textSize="25dp" />

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/new_email_"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/new_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/newEmail"
                    android:inputType="textEmailAddress"
                    android:drawableRight="@mipmap/ic_account_circle_grey600_36dp"
                    android:drawableTint="@color/accent"
                    app:layout_constraintTop_toBottomOf="@+id/logo" />
            </android.support.design.widget.TextInputLayout>

        </TableRow>

        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/confirm_mail_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/confirm_mail_pass1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="5dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:drawableRight="@mipmap/ic_lock_outline_grey600_36dp"
                    android:drawableTint="@color/accent"
                    app:layout_constraintTop_toBottomOf="@+id/logo" />
            </android.support.design.widget.TextInputLayout>

        </TableRow>


        <TableRow
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center">

            <LinearLayout
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                >

                <Button
                    android:id="@+id/change_email_cancel"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:background="@color/divider"
                    android:textColor="@color/icons"
                    android:layout_marginRight="10dp"
                    app:layout_constraintTop_toBottomOf="@+id/login_email"
                    android:text="@string/BTNcancel"
                    android:layout_gravity="center"
                    />

                <Button
                    android:id="@+id/change_email_confirm"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:background="@color/primary_dark"
                    android:text="@string/BTNconfirma"
                    android:textColor="@color/icons"
                    app:layout_constraintTop_toBottomOf="@+id/login_email" />

            </LinearLayout>

        </TableRow>

    </TableLayout>
</android.support.constraint.ConstraintLayout>